# scale-codec-cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: ci.yml
cmake/: HunterGate.cmake
docker/: ci.Dockerfile
include/scale/: bitvec.hpp  encode_append.hpp  enum_traits.hpp  scale.hpp  scale_decoder_stream.hpp  scale_encoder_stream.hpp  scale_error.hpp  types.hpp  unreachable.hpp  visitor.hpp
include/scale/buffer/: buffer.hpp  hexutil.hpp
include/scale/detail/: fixed_width_integer.hpp  fixed_witdh_integer.hpp  variant.hpp
include/scale/outcome/: outcome-register.hpp  outcome.hpp  outcome_throw.hpp
scripts/: build.sh  generate_clang_tidy_diff.sh
src/: CMakeLists.txt  compact_len_utils.hpp  encode_append.cpp  scale_decoder_stream.cpp  scale_encoder_stream.cpp  scale_error.cpp
src/buffer/: CMakeLists.txt  buffer.cpp  buffer_back_insert_iterator.hpp  hexutil.cpp  hexutil.hpp
test/: CMakeLists.txt  append_test_data.hpp  scale_array_test.cpp  scale_boolean_test.cpp  scale_collection_test.cpp  scale_compact_test.cpp  scale_convenience_functions_test.cpp  scale_decoder_stream_test.cpp  scale_encode_append_test.cpp  scale_encode_counter_test.cpp  scale_enum_test.cpp  scale_fixed_test.cpp  scale_optional_test.cpp  scale_pair_test.cpp  scale_strings_test.cpp  scale_tuple_test.cpp  scale_variant_test.cpp
test/installation/: CMakeLists.txt  scale_test.cpp
test/util/: literals.hpp  outcome.hpp
